Source/WebCore/platform/mediastream/mac/RealtimeOutgoingVideoSourceCocoa.h
@@ -29,6 +29,10 @@
 
 #include "RealtimeOutgoingVideoSource.h"
 #include "PixelBufferConformerCV.h"
+#include <webrtc/api/video/video_rotation.h>
+
+typedef struct OpaqueVTImageRotationSession* VTImageRotationSessionRef;
+typedef struct __CVPixelBufferPool* CVPixelBufferPoolRef;
 
 namespace WebCore {
 
@@ -43,8 +47,15 @@ private:
     void sampleBufferUpdated(MediaStreamTrackPrivate&, MediaSample&) final;
 
     RetainPtr<CVPixelBufferRef> convertToYUV(CVPixelBufferRef);
+    RetainPtr<CVPixelBufferRef> rotatePixelBuffer(CVPixelBufferRef, webrtc::VideoRotation);
 
     std::unique_ptr<PixelBufferConformerCV> m_pixelBufferConformer;
+    RetainPtr<VTImageRotationSessionRef> m_rotationSession;
+    RetainPtr<CVPixelBufferPoolRef> m_rotationPool;
+    webrtc::VideoRotation m_currentRotationAngle { webrtc::kVideoRotation_0 };
+    size_t m_rotatedWidth { 0 };
+    size_t m_rotatedHeight { 0 };
+    OSType m_rotatedFormat;
 
 #if !RELEASE_LOG_DISABLED
     size_t m_numberOfFrames { 0 };
