Source/WebCore/platform/mediastream/mac/RealtimeOutgoingVideoSourceCocoa.mm
@@ -28,9 +28,12 @@
 
 #if USE(LIBWEBRTC)
 
+#import "Logging.h"
+#import "MediaSample.h"
 #import "PixelBufferConformerCV.h"
 #import <pal/cf/CoreMediaSoftLink.h>
 #import "CoreVideoSoftLink.h"
+#import "VideoToolboxSoftLink.h"
 
 namespace WebCore {
 
@@ -43,6 +46,85 @@ RetainPtr<CVPixelBufferRef> RealtimeOutgoingVideoSourceCocoa::convertToYUV(CVPix
         m_pixelBufferConformer = std::make_unique<PixelBufferConformerCV>((__bridge CFDictionaryRef)@{ (__bridge NSString *)kCVPixelBufferPixelFormatTypeKey: @(kCVPixelFormatType_420YpCbCr8Planar) });
 
     return m_pixelBufferConformer->convert(pixelBuffer);
+}
+
+static inline void computeRotatedWidthAndHeight(CVPixelBufferRef pixelBuffer, webrtc::VideoRotation rotation, size_t& width, size_t& height)
+{
+    switch (rotation) {
+    case webrtc::kVideoRotation_0:
+    case webrtc::kVideoRotation_180:
+        width = CVPixelBufferGetWidth(pixelBuffer);
+        height = CVPixelBufferGetHeight(pixelBuffer);
+        return;
+    case webrtc::kVideoRotation_90:
+    case webrtc::kVideoRotation_270:
+        width = CVPixelBufferGetHeight(pixelBuffer);
+        height = CVPixelBufferGetWidth(pixelBuffer);
+        return;
+    }
+}
+
+RetainPtr<CVPixelBufferRef> RealtimeOutgoingVideoSourceCocoa::rotatePixelBuffer(CVPixelBufferRef pixelBuffer, webrtc::VideoRotation rotation)
+{
+    ASSERT(rotation);
+    if (!rotation)
+        return pixelBuffer;
+
+    if (!m_rotationSession || rotation != m_currentRotation) {
+        VTImageRotationSessionRef rawRotationSession = nullptr;
+        auto status = VTImageRotationSessionCreate(kCFAllocatorDefault, rotation, &rawRotationSession);
+        if (status != noErr) {
+            RELEASE_LOG(MediaStream, "RealtimeOutgoingVideoSourceCocoa::rotatePixelBuffer failed creating a rotation session with error %d", status);
+            return nullptr;
+        }
+
+        m_rotationSession = adoptCF(rawRotationSession);
+        m_currentRotation = rotation;
+
+        VTImageRotationSessionSetProperty(rawRotationSession, kVTImageRotationPropertyKey_EnableHighSpeedTransfer, kCFBooleanTrue);
+    }
+
+    size_t rotatedWidth, rotatedHeight;
+    computeRotatedWidthAndHeight(pixelBuffer, rotation, rotatedWidth, rotatedHeight);
+    auto format = CVPixelBufferGetPixelFormatType(pixelBuffer);
+    if (!m_rotationPool || rotatedWidth != m_rotatedWidth || rotatedHeight != m_rotatedHeight || format != m_rotatedFormat) {
+        auto pixelAttributes = @{
+            (__bridge NSString *)kCVPixelBufferWidthKey: @(rotatedWidth),
+            (__bridge NSString *)kCVPixelBufferHeightKey: @(rotatedHeight),
+            (__bridge NSString *)kCVPixelBufferPixelFormatTypeKey: @(format),
+            (__bridge NSString *)kCVPixelBufferCGImageCompatibilityKey: @NO,
+        };
+
+        CVPixelBufferPoolRef pool = nullptr;
+        auto status = CVPixelBufferPoolCreate(kCFAllocatorDefault, nullptr, (__bridge CFDictionaryRef)pixelAttributes, &pool);
+
+        if (status != kCVReturnSuccess) {
+            RELEASE_LOG(MediaStream, "RealtimeOutgoingVideoSourceCocoa::rotatePixelBuffer failed creating a pixel buffer pool with error %d", status);
+            return nullptr;
+        }
+        m_rotationPool = adoptCF(pool);
+
+        m_rotatedWidth = rotatedWidth;
+        m_rotatedHeight = rotatedHeight;
+        m_rotatedFormat = format;
+    }
+
+    CVPixelBufferRef rawRotatedBuffer = nullptr;
+    auto status = CVPixelBufferPoolCreatePixelBuffer(kCFAllocatorDefault, m_rotationPool.get(), &rawRotatedBuffer);
+
+    if (status != kCVReturnSuccess) {
+        RELEASE_LOG(MediaStream, "RealtimeOutgoingVideoSourceCocoa::rotatePixelBuffer failed creating a pixel buffer with error %d", status);
+        return nullptr;
+    }
+    RetainPtr<CVPixelBufferRef> rotatedBuffer = adoptCF(rawRotatedBuffer);
+
+    status = VTImageRotationSessionTransferImage(m_rotationSession.get(), pixelBuffer, rotatedBuffer.get());
+
+    if (status != noErr) {
+        RELEASE_LOG(MediaStream, "RealtimeOutgoingVideoSourceCocoa::rotatePixelBuffer failed rotating with error %d", status);
+        return nullptr;
+    }
+    return rotatedBuffer;
 }
 
 } // namespace WebCore
